--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,8 @@
+# These individuals contributed to the hbnb project in this repository 
+
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+
+#Update by 
 Semachew Fasika eth.saf.1992@gmail.com
 Esther Muthui estarmalkia@gmail.com
