--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,5 @@
-MJ Johnson
-David John Coleman II
-Kimberly Wong
-Carrie Ybay
-Naomi Sorrell
-Bobby Yang
+Miranda Evans miranda.r.evans@gmail.com
+Kevin Yook kevin.yook@holbertonschool.com
+
+Farrukh Akhrarov farruh1996@gmail.com
+Laura Roudge laura.derohan@gmail.com
