--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,8 @@
-Miranda Evans miranda.r.evans@gmail.com
-Kevin Yook kevin.yook@holbertonschool.com
+# These individuals contributed to the hbnb project in this repository 
 
-Farrukh Akhrarov farruh1996@gmail.com
-Laura Roudge laura.derohan@gmail.com
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+
+#Update by 
+Semachew Fasika eth.saf.1992@gmail.com
+Esther Muthui estarmalkia@gmail.com
